# secrag

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: bootstrap-https.yml  ci.yml
docs/superpowers/plans/: 2026-07-07-jalon-0-squelette.md  2026-07-08-jalons-1-5-retrieval-core.md
docs/superpowers/specs/: 2026-07-07-sec-10k-rag-design.md
evals/: .gen-partial.jsonl  CHANGELOG.md  golden.jsonl  thresholds.json
evals/results/: 2026-07-09-hybrid-rerank-v2m3.json  2026-07-09-hybrid-rrf.json  2026-07-09-vector-baseline.json  2026-07-10-generation-hybrid-rerank-haiku.json  2026-07-13-hybrid-decomposed-rerank-v2m3.json  2026-07-13-hybrid-decomposed.json  2026-07-14-hybrid-decomposed-minilm-l6.json
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
scripts/: extract_golden_candidates.py
src/secrag/: config.py  db.py  embedding.py  generation.py  models.py  rerank.py
src/secrag/api/: main.py  ratelimit.py  schemas.py
src/secrag/evals/: gate.py  gen.py  golden.py  metrics.py  run.py
tests/: conftest.py  fakes.py  test_ask_api.py  test_chunker.py  test_download_cli.py  test_edgar.py  test_embedding.py  test_gate.py  test_gen_eval.py  test_generation.py  test_golden.py  test_health.py  test_hybrid.py  test_metrics.py  test_migrations.py  test_parse10k.py  test_pipeline.py  test_query_decomposition.py  test_ratelimit.py  test_rerank.py  test_sanity.py  test_search_api.py  test_ui.py
tests/fixtures/: mini_10k.html
(+8 files in other folders)
